--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "heroku-prebuild": "cd qbclient && npm install && npm run build && cd .. && cd qbclient && npm install",
-    "start": "cd qbclient && npm start && .. && cd qbserver && npm start && cd src && cd Server && node index.js",
+    "start": "cd qbclient && npm start & cd qbserver && node index.js && fg",
+    "dev": "concurrently \"cd .. && cd qbserver && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
