--- a/qbclient/package.json
+++ b/qbclient/package.json
@@ -22,7 +22,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & node qbclient/src/server/index.js && fg",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
