--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "cd qbclient && npm install && npm run build && cd .. && cd qbclient && npm install",
+    "heroku-prebuild": "cd qbclient && npm install && npm run build && cd .. && cd qbserver && npm install",
     "start": "cd qbserver && node index.js & cd qbclient/src/Server && node index.js & cd qbclient && npm start && fg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
