--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "cd qbclient && npm install && npm run build && cd .. && cd qbserver && npm install",
-    "start": "cd qbserver && node index.js & cd qbclient/src/Server && node index.js && fg",
+    "heroku-prebuild": "cd qbclient && npm install && cd .. && cd qbserver && npm install",
+    "start": "cd qbclient npm start cd qbserver && node index.js & cd qbclient/src/Server && node index.js && fg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
