--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "heroku-prebuild": "cd qbclient && npm install && cd .. && cd qbserver && npm install",
-    "start": "cd qbserver && node index.js & cd qbclient/src/Server && node index.js & cd qbclient && npm start && fg",
+    "start": "cd qbclient/src/Server && node index.js & cd qbserver && node index.js & cd qbclient && npm start && fg",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
